--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     	<artifactId>zendesk-java-client</artifactId>
     	<version>0.5.0</version>
     </dependency>
+    
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 	<!-- https://mvnrepository.com/artifact/com.ning/async-http-client -->
 	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -41,5 +42,25 @@
 		<artifactId>slf4j-nop</artifactId>
 		<version>1.7.21</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+	<dependency>
+    	<groupId>commons-codec</groupId>
+    	<artifactId>commons-codec</artifactId>
+    	<version>1.10</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+	<dependency>
+    	<groupId>com.googlecode.json-simple</groupId>
+    	<artifactId>json-simple</artifactId>
+    	<version>1.1.1</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.python/jython-standalone -->
+	<dependency>
+    	<groupId>org.python</groupId>
+    	<artifactId>jython-standalone</artifactId>
+    	<version>2.7.0</version>
+	</dependency>
+	
+	
   </dependencies>
 </project>
